# merge-bazel-lockfiles

./: .dir-locals.el  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  Makefile  WORKSPACE.bazel  go.mod  main.go  merge.go  merge.py  merge_test.go  test-linux.json  test-macos.json  test-merged.json  test.py
.github/workflows/: test.yaml
dev/: BUILD.bazel
